# Dual_manipulators_moveit_motion_planning

./: .setup_assistant  README.md
config/: cartesian_limits.yaml  fake_controllers.yaml  gazebo_controllers.yaml  gazebo_medrob.urdf  joint_limits.yaml  medrob.srdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
devel/: .catkin  setup.sh
devel/lib/cobot_mesh_loader/: pick_place  pick_place_gazebo  spawn_box
devel/lib/pkgconfig/: cobot_mesh_loader.pc  cobot_simulation.pc  gazebo_ros_link_attacher.pc  moveit.pc
devel/share/cobot_mesh_loader/cmake/: cobot_mesh_loaderConfig.cmake
devel/share/cobot_simulation/cmake/: cobot_simulationConfig.cmake
devel/share/gazebo_ros_link_attacher/cmake/: gazebo_ros_link_attacherConfig.cmake
devel/share/moveit/cmake/: moveitConfig.cmake
devel/share/roseus/ros/gazebo_ros_link_attacher/: manifest.l
launch/: demo.launch  gazebo.launch  move_group.launch  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml
src/cobot_mesh_loader/: CMakeLists.txt
src/cobot_mesh_loader/config/: V2_joint_names-URDF.yaml  controller_config_V2.yaml  ros_gazebo.yaml
src/cobot_mesh_loader/launch/: display.launch  gazebo_moveit.launch  v2_gazebo.launch
src/cobot_mesh_loader/models/box/: model.sdf
src/cobot_mesh_loader/rviz/: cobot_new.rviz
src/cobot_mesh_loader/src/: pick_place.cpp  pick_place_gazebo.cpp  spawn_box.cpp
src/cobot_mesh_loader/urdf/: robot_urdf.urdf
src/cobot_mesh_loader/worlds/: cobot_world.world
